Minor updates Added error handling for server errors Fixed errors with spacing and layout

--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,7 @@
 #brand-selector {
     width: 200px;
 }
+
+.subtitle {
+    max-width: 600px;
+}
